<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.auth.AuthActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_default_big"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingEnd="@dimen/buttons_padding"
            android:paddingStart="@dimen/buttons_padding">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_default"
                android:hint="@string/hint_email"
                android:padding="@dimen/margin_default_small"
                android:textSize="@dimen/text_size_title" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:background="@drawable/bg_default"
                android:hint="@string/hint_password"
                android:padding="@dimen/margin_default_small"
                android:textSize="@dimen/text_size_title" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_default"
                android:background="@drawable/bg_default"
                android:padding="@dimen/margin_default_small"
                android:text="@string/action_login"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:background="@drawable/bg_cancel_default"
                android:padding="@dimen/margin_default_small"
                android:text="@string/cancel" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
</FrameLayout>