<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@id/input_phone_layout"
        app:layout_constraintEnd_toEndOf="@id/input_phone_layout"
        app:layout_constraintTop_toTopOf="@id/input_phone_layout"
        app:layout_constraintBottom_toBottomOf="@id/input_phone_layout"/>

    <LinearLayout
        android:id="@+id/input_phone_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_default"
        tools:context=".ui.auth.AuthActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_big_title"
            android:text="@string/edit_phone"/>

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@drawable/bg_default"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:padding="@dimen/margin_default_small"
            android:textSize="@dimen/text_size_title" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@drawable/bg_default"
            android:padding="@dimen/margin_default_small"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>