<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/basket_fab"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_basket_empty" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:src="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_button">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:adjustViewBounds="true"
                tools:src="@drawable/background_girl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_item_default"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/product_image"
                tools:text="Title" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_item_default"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/product_image"
                app:layout_constraintTop_toBottomOf="@+id/title_text_view"
                tools:text="200.00 руб." />

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_item_default"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_text_view"
                tools:text="Description description description description description description description description description description" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_item_default"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/description_text_view"
                app:layout_constraintTop_toBottomOf="@+id/description_text_view">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/count"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/count_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingTop="2dp"
                    android:text="@string/default_count"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_item_default"
                android:text="@string/add"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</RelativeLayout>